// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`initializes all reducers 1`] = `
Object {
  "authorization": Object {
    "cameraAuthorized": "undetermined",
    "notificationsAuthorized": "undetermined",
    "photoAuthorized": "undetermined",
  },
  "contacts": Object {
    "index": 0,
    "key": "contacts",
    "selectedContact": false,
  },
  "events": Za {
    "B": null,
    "F": 139268,
    "f": Array [],
    "h": 0,
    "s": 16647951,
    "u": null,
  },
  "flags": Object {
    "antiSybilVerification": "phoneAndFunCaptcha",
    "darkTheme": false,
    "debug": false,
    "designSystem": false,
    "metaTx": true,
    "sandbox": false,
  },
  "hdwallet": Za {
    "B": null,
    "F": 139268,
    "f": Array [],
    "h": 0,
    "s": 16647951,
    "u": null,
  },
  "history": de {
    "F": 8192,
    "s": 65937614,
    "u": null,
  },
  "hub": Za {
    "B": null,
    "F": 139268,
    "f": Array [
      "head",
      null,
      "events",
      Pf {
        "B": -2017569654,
        "Ca": null,
        "F": 139264,
        "Fa": Y {
          "B": -2017569654,
          "F": 139268,
          "h": 0,
          "root": lf {
            "M": null,
            "f": Array [
              null,
              null,
              null,
              null,
              null,
              null,
              null,
              null,
              null,
              null,
              null,
              null,
              null,
              null,
              null,
              null,
              null,
              null,
              null,
              null,
              null,
              null,
              null,
              null,
              null,
              null,
              null,
              null,
              null,
              null,
              null,
              null,
            ],
          },
          "s": 167666463,
          "shift": 5,
          "u": null,
          "za": Array [],
        },
        "count": 0,
        "s": 31858766,
        "u": null,
      },
    ],
    "h": 2,
    "s": 16647951,
    "u": null,
  },
  "migrations": Object {
    "steps": Object {},
    "targets": Array [],
  },
  "myInfo": Object {
    "changed": Object {},
  },
  "networking": Object {},
  "onboarding": Object {
    "newbie": false,
    "userData": Object {},
  },
  "recovery": Za {
    "B": null,
    "F": 139268,
    "f": Array [],
    "h": 0,
    "s": 16647951,
    "u": null,
  },
  "request": null,
  "scanner": Object {
    "cameraEnabled": false,
  },
  "settings": Object {
    "analyticsOptOut": false,
    "dataBackup": false,
  },
  "sns": Object {},
  "status": Za {
    "B": null,
    "F": 139268,
    "f": Array [],
    "h": 0,
    "s": 16647951,
    "u": null,
  },
  "uport": Za {
    "B": null,
    "F": 139268,
    "f": Array [],
    "h": 0,
    "s": 16647951,
    "u": null,
  },
  "vc": Object {
    "jwt": Array [],
  },
}
`;

exports[`initializes all reducers 2`] = `
Object {
  "authorization": Object {
    "cameraAuthorized": "undetermined",
    "notificationsAuthorized": "undetermined",
    "photoAuthorized": "undetermined",
  },
  "contacts": Object {
    "index": 0,
    "key": "contacts",
    "selectedContact": false,
  },
  "events": Za {
    "B": null,
    "F": 139268,
    "f": Array [],
    "h": 0,
    "s": 16647951,
    "u": null,
  },
  "flags": Object {
    "antiSybilVerification": "phoneAndFunCaptcha",
    "darkTheme": false,
    "debug": false,
    "designSystem": false,
    "metaTx": true,
    "sandbox": false,
  },
  "hdwallet": Za {
    "B": null,
    "F": 139268,
    "f": Array [],
    "h": 0,
    "s": 16647951,
    "u": null,
  },
  "history": de {
    "F": 8192,
    "s": 65937614,
    "u": null,
  },
  "hub": Za {
    "B": null,
    "F": 139268,
    "f": Array [
      "head",
      null,
      "events",
      Pf {
        "B": -2017569654,
        "Ca": null,
        "F": 139264,
        "Fa": Y {
          "B": -2017569654,
          "F": 139268,
          "h": 0,
          "root": lf {
            "M": null,
            "f": Array [
              null,
              null,
              null,
              null,
              null,
              null,
              null,
              null,
              null,
              null,
              null,
              null,
              null,
              null,
              null,
              null,
              null,
              null,
              null,
              null,
              null,
              null,
              null,
              null,
              null,
              null,
              null,
              null,
              null,
              null,
              null,
              null,
            ],
          },
          "s": 167666463,
          "shift": 5,
          "u": null,
          "za": Array [],
        },
        "count": 0,
        "s": 31858766,
        "u": null,
      },
    ],
    "h": 2,
    "s": 16647951,
    "u": null,
  },
  "migrations": Object {
    "steps": Object {},
    "targets": Array [],
  },
  "myInfo": Object {
    "changed": Object {},
  },
  "networking": Object {},
  "onboarding": Object {
    "newbie": false,
    "userData": Object {},
  },
  "recovery": Za {
    "B": null,
    "F": 139268,
    "f": Array [],
    "h": 0,
    "s": 16647951,
    "u": null,
  },
  "request": null,
  "scanner": Object {
    "cameraEnabled": false,
  },
  "settings": Object {
    "analyticsOptOut": false,
    "dataBackup": false,
  },
  "sns": Object {},
  "status": Za {
    "B": null,
    "F": 139268,
    "f": Array [],
    "h": 0,
    "s": 16647951,
    "u": null,
  },
  "uport": Za {
    "B": null,
    "F": 139268,
    "f": Array [],
    "h": 0,
    "s": 16647951,
    "u": null,
  },
  "vc": Object {
    "jwt": Array [],
  },
}
`;

exports[`resetDevice() 1`] = `
Object {
  "authorization": Object {
    "cameraAuthorized": "undetermined",
    "notificationsAuthorized": "undetermined",
    "photoAuthorized": "undetermined",
  },
  "contacts": Object {
    "index": 0,
    "key": "contacts",
    "selectedContact": false,
  },
  "events": Za {
    "B": null,
    "F": 139268,
    "f": Array [],
    "h": 0,
    "s": 16647951,
    "u": null,
  },
  "flags": Object {
    "antiSybilVerification": "phoneAndFunCaptcha",
    "darkTheme": false,
    "debug": false,
    "designSystem": false,
    "metaTx": true,
    "sandbox": false,
  },
  "hdwallet": Za {
    "B": null,
    "F": 139268,
    "f": Array [],
    "h": 0,
    "s": 16647951,
    "u": null,
  },
  "history": de {
    "F": 8192,
    "s": 65937614,
    "u": null,
  },
  "hub": Za {
    "B": null,
    "F": 139268,
    "f": Array [
      "head",
      null,
      "events",
      Pf {
        "B": -2017569654,
        "Ca": null,
        "F": 139264,
        "Fa": Y {
          "B": -2017569654,
          "F": 139268,
          "h": 0,
          "root": lf {
            "M": null,
            "f": Array [
              null,
              null,
              null,
              null,
              null,
              null,
              null,
              null,
              null,
              null,
              null,
              null,
              null,
              null,
              null,
              null,
              null,
              null,
              null,
              null,
              null,
              null,
              null,
              null,
              null,
              null,
              null,
              null,
              null,
              null,
              null,
              null,
            ],
          },
          "s": 167666463,
          "shift": 5,
          "u": null,
          "za": Array [],
        },
        "count": 0,
        "s": 31858766,
        "u": null,
      },
    ],
    "h": 2,
    "s": 16647951,
    "u": null,
  },
  "migrations": Object {
    "steps": Object {},
    "targets": Array [],
  },
  "myInfo": Object {
    "changed": Object {},
  },
  "networking": Object {},
  "onboarding": Object {
    "newbie": false,
    "userData": Object {},
  },
  "recovery": Za {
    "B": null,
    "F": 139268,
    "f": Array [],
    "h": 0,
    "s": 16647951,
    "u": null,
  },
  "request": null,
  "scanner": Object {
    "cameraEnabled": false,
  },
  "settings": Object {
    "analyticsOptOut": false,
    "channel": undefined,
    "dataBackup": false,
  },
  "sns": Object {},
  "status": Za {
    "B": null,
    "F": 139268,
    "f": Array [],
    "h": 0,
    "s": 16647951,
    "u": null,
  },
  "uport": Za {
    "B": null,
    "F": 139268,
    "f": Array [],
    "h": 0,
    "s": 16647951,
    "u": null,
  },
  "vc": Object {
    "jwt": Array [],
  },
}
`;

exports[`resetDevice() 2`] = `
Object {
  "authorization": Object {
    "cameraAuthorized": "undetermined",
    "notificationsAuthorized": "undetermined",
    "photoAuthorized": "undetermined",
  },
  "contacts": Object {
    "index": 0,
    "key": "contacts",
    "selectedContact": false,
  },
  "events": Za {
    "B": null,
    "F": 139268,
    "f": Array [],
    "h": 0,
    "s": 16647951,
    "u": null,
  },
  "flags": Object {
    "antiSybilVerification": "phoneAndFunCaptcha",
    "darkTheme": false,
    "debug": false,
    "designSystem": false,
    "metaTx": true,
    "sandbox": false,
  },
  "hdwallet": Za {
    "B": null,
    "F": 139268,
    "f": Array [],
    "h": 0,
    "s": 16647951,
    "u": null,
  },
  "history": de {
    "F": 8192,
    "s": 65937614,
    "u": null,
  },
  "hub": Za {
    "B": null,
    "F": 139268,
    "f": Array [
      "head",
      null,
      "events",
      Pf {
        "B": -2017569654,
        "Ca": null,
        "F": 139264,
        "Fa": Y {
          "B": -2017569654,
          "F": 139268,
          "h": 0,
          "root": lf {
            "M": null,
            "f": Array [
              null,
              null,
              null,
              null,
              null,
              null,
              null,
              null,
              null,
              null,
              null,
              null,
              null,
              null,
              null,
              null,
              null,
              null,
              null,
              null,
              null,
              null,
              null,
              null,
              null,
              null,
              null,
              null,
              null,
              null,
              null,
              null,
            ],
          },
          "s": 167666463,
          "shift": 5,
          "u": null,
          "za": Array [],
        },
        "count": 0,
        "s": 31858766,
        "u": null,
      },
    ],
    "h": 2,
    "s": 16647951,
    "u": null,
  },
  "migrations": Object {
    "steps": Object {},
    "targets": Array [],
  },
  "myInfo": Object {
    "changed": Object {},
  },
  "networking": Object {},
  "onboarding": Object {
    "newbie": false,
    "userData": Object {},
  },
  "recovery": Za {
    "B": null,
    "F": 139268,
    "f": Array [],
    "h": 0,
    "s": 16647951,
    "u": null,
  },
  "request": null,
  "scanner": Object {
    "cameraEnabled": false,
  },
  "settings": Object {
    "analyticsOptOut": false,
    "channel": undefined,
    "dataBackup": false,
  },
  "sns": Object {},
  "status": Za {
    "B": null,
    "F": 139268,
    "f": Array [],
    "h": 0,
    "s": 16647951,
    "u": null,
  },
  "uport": Za {
    "B": null,
    "F": 139268,
    "f": Array [],
    "h": 0,
    "s": 16647951,
    "u": null,
  },
  "vc": Object {
    "jwt": Array [],
  },
}
`;

exports[`resetDevice() 3`] = `
Object {
  "authorization": Object {
    "cameraAuthorized": "undetermined",
    "notificationsAuthorized": "undetermined",
    "photoAuthorized": "undetermined",
  },
  "contacts": Object {
    "index": 0,
    "key": "contacts",
    "selectedContact": false,
  },
  "events": Za {
    "B": null,
    "F": 139268,
    "f": Array [],
    "h": 0,
    "s": 16647951,
    "u": null,
  },
  "flags": Object {
    "antiSybilVerification": "phoneAndFunCaptcha",
    "darkTheme": false,
    "debug": false,
    "designSystem": false,
    "metaTx": true,
    "sandbox": false,
  },
  "hdwallet": Za {
    "B": null,
    "F": 139268,
    "f": Array [],
    "h": 0,
    "s": 16647951,
    "u": null,
  },
  "history": de {
    "F": 8192,
    "s": 65937614,
    "u": null,
  },
  "hub": Za {
    "B": null,
    "F": 139268,
    "f": Array [
      "head",
      null,
      "events",
      Pf {
        "B": -2017569654,
        "Ca": null,
        "F": 139264,
        "Fa": Y {
          "B": -2017569654,
          "F": 139268,
          "h": 0,
          "root": lf {
            "M": null,
            "f": Array [
              null,
              null,
              null,
              null,
              null,
              null,
              null,
              null,
              null,
              null,
              null,
              null,
              null,
              null,
              null,
              null,
              null,
              null,
              null,
              null,
              null,
              null,
              null,
              null,
              null,
              null,
              null,
              null,
              null,
              null,
              null,
              null,
            ],
          },
          "s": 167666463,
          "shift": 5,
          "u": null,
          "za": Array [],
        },
        "count": 0,
        "s": 31858766,
        "u": null,
      },
    ],
    "h": 2,
    "s": 16647951,
    "u": null,
  },
  "migrations": Object {
    "steps": Object {},
    "targets": Array [],
  },
  "myInfo": Object {
    "changed": Object {},
  },
  "networking": Object {},
  "onboarding": Object {
    "newbie": false,
    "userData": Object {},
  },
  "recovery": Za {
    "B": null,
    "F": 139268,
    "f": Array [],
    "h": 0,
    "s": 16647951,
    "u": null,
  },
  "request": null,
  "scanner": Object {
    "cameraEnabled": false,
  },
  "settings": Object {
    "analyticsOptOut": false,
    "channel": undefined,
    "dataBackup": false,
  },
  "sns": Object {},
  "status": Za {
    "B": null,
    "F": 139268,
    "f": Array [],
    "h": 0,
    "s": 16647951,
    "u": null,
  },
  "uport": Za {
    "B": null,
    "F": 139268,
    "f": Array [],
    "h": 0,
    "s": 16647951,
    "u": null,
  },
  "vc": Object {
    "jwt": Array [],
  },
}
`;
